updated citation, added speed clarification

--- a/index.html
+++ b/index.html
@@ -592,10 +592,14 @@
 
     </div>
     <br>
-    <pre class="is-hidden-mobile"><code>@inproceedings{ha2024umionlegs,
-    title={{UMI} on Legs: Making Manipulation Policies Mobile with Manipulation-Centric Whole-body Controllers}, 
-    author={Huy Ha and Yihuai Gao and Zipeng Fu and Jie Tan and Shuran Song},
-    year={2024},
+    <pre class="is-hidden-mobile"><code>@misc{ha2024umilegs,
+      title={{UMI} on Legs: Making Manipulation Policies Mobile with Manipulation-Centric Whole-body Controllers}, 
+      author={Huy Ha and Yihuai Gao and Zipeng Fu and Jie Tan and Shuran Song},
+      year={2024},
+      eprint={2407.10353},
+      archivePrefix={arXiv},
+      primaryClass={cs.RO},
+      url={https://arxiv.org/abs/2407.10353},
 }</code></pre>
     <p>
       If you have any questions, please contact <a href="https://www.cs.columbia.edu/~huy/">Huy Ha</a> and <a
@@ -647,7 +651,8 @@
             <video autoplay muted loop playsinline width="100%">
               <source src="./static/videos/cup-in-the-wild-small.mp4" type="video/mp4">
             </video>
-            We were able to just plug-and-play UMI's publicly released policy onto our robot dog!
+            We were able to just plug-and-play UMI's publicly released policy onto our robot dog (seen above in 1x
+            speed)!
             With an expressive embodiment-agnostic interface in place, I'm optimistic about a world where people can
             separately develop ever more general
             visuo-motor policies and ever more robust WBCs, knowing that they can be plugged-and-played together in the
