updated publication notification

--- a/index.html
+++ b/index.html
@@ -129,7 +129,11 @@
       </h1>
       <h1 class="subtitle is-1 publication-title is-size-4-mobile" style="font-size: 4rem;">
         Making Manipulation Policies Mobile with <br class="is-hidden-mobile"> Manipulation-Centric Whole-body
-        Controllers</h1>
+        Controllers
+      </h1>
+      <h1 class="is-2 is-italic is-size-4-mobile" style="font-size: 2rem; opacity: 80%;">
+        Conference on Robot Learning 2024
+      </h1>
       <div class="column has-text-centered is-hidden-tablet">
         <div class="publication-links">
           <!-- PDF Link. -->
@@ -592,14 +596,11 @@
 
     </div>
     <br>
-    <pre class="is-hidden-mobile"><code>@misc{ha2024umilegs,
-      title={{UMI} on Legs: Making Manipulation Policies Mobile with Manipulation-Centric Whole-body Controllers}, 
-      author={Huy Ha and Yihuai Gao and Zipeng Fu and Jie Tan and Shuran Song},
-      year={2024},
-      eprint={2407.10353},
-      archivePrefix={arXiv},
-      primaryClass={cs.RO},
-      url={https://arxiv.org/abs/2407.10353},
+    <pre class="is-hidden-mobile"><code>@inproceedings{ha2024umilegs,
+  title={{UMI} on Legs: Making Manipulation Policies Mobile with Manipulation-Centric Whole-body Controllers}, 
+  author={Huy Ha and Yihuai Gao and Zipeng Fu and Jie Tan and Shuran Song},
+  year={2024},
+  booktitle={Proceedings of the 2024 Conference on Robot Learning},
 }</code></pre>
     <p>
       If you have any questions, please contact <a href="https://www.cs.columbia.edu/~huy/">Huy Ha</a> and <a
