--- a/index.html
+++ b/index.html
@@ -570,7 +570,6 @@
 
         <div class="content has-text-justified">
           <p>
-            VIDEOS GO HERE
           </p>
         </div>
 
@@ -639,7 +638,7 @@
                       " src="./static/images/gireesh.png" alt="Gireesh Nandiraju">
             </a>
           </figure>
-          <a href="https://user432.github.io/">Gireesh</a><sup>1,2</sup>
+          <a href="https://user432.github.io/">Gireesh Nandiraju</a><sup>1,2</sup>
         </div>
         <div class="author-block has-text-centered has-addons-centered">
           <figure class="image is-96x96">
@@ -659,15 +658,6 @@
           </figure>
           <a href="https://hughw19.github.io/">He Wang</a><sup>1,2</sup>
         </div>
-        <!-- <div class="author-block has-text-centered has-addons-centered">
-          <figure class="image  is-96x96">
-            <a href="https://shurans.github.io/">
-              <img class="is-rounded
-                      " src="./static/images/shuran.jpg" alt="Shuran Song">
-            </a>
-          </figure>
-          <a href="https://shurans.github.io/">Shuran Song</a><sup>1,2</sup>
-        </div> -->
       </div>
 
 
