--- a/index.html
+++ b/index.html
@@ -30,22 +30,22 @@
   <link rel="apple-touch-icon" sizes="180x180"
     href="//www-media.stanford.edu/assets/favicon/apple-touch-icon-180x180.png" />
 
-  <link rel="icon" type="image/png" href="//www-media.stanford.edu/assets/favicon/favicon-196x196.png"
+  <link rel="icon" type="image/svg" href="./static/images/pku.svg"
     sizes="196x196" />
-  <link rel="icon" type="image/png" href="//www-media.stanford.edu/assets/favicon/favicon-192x192.png"
+  <link rel="icon" type="image/svg" href="./static/images/pku.svg"
     sizes="192x192" />
-  <link rel="icon" type="image/png" href="//www-media.stanford.edu/assets/favicon/favicon-128.png" sizes="128x128" />
-  <link rel="icon" type="image/png" href="//www-media.stanford.edu/assets/favicon/favicon-96x96.png" sizes="96x96" />
-  <link rel="icon" type="image/png" href="//www-media.stanford.edu/assets/favicon/favicon-32x32.png" sizes="32x32" />
-  <link rel="icon" type="image/png" href="//www-media.stanford.edu/assets/favicon/favicon-16x16.png" sizes="16x16" />
+  <link rel="icon" type="image/svg" href="./static/images/pku.svg" sizes="128x128" />
+  <link rel="icon" type="image/svg" href="./static/images/pku.svg" sizes="96x96" />
+  <link rel="icon" type="image/svg" href="./static/images/pku.svg" sizes="32x32" />
+  <link rel="icon" type="image/svg" href="./static/images/pku.svg" sizes="16x16" />
 
-  <link rel="mask-icon" href="//www-media.stanford.edu/assets/favicon/safari-pinned-tab.svg" color="#ffffff">
+  <link rel="mask-icon" href="./static/images/pku.svg" color="#ffffff">
   <meta name="application-name" content="Stanford University" />
   <meta name="msapplication-TileColor" content="#FFFFFF" />
-  <meta name="msapplication-TileImage" content="//www-media.stanford.edu/assets/favicon/mstile-144x144.png" />
-  <meta name="msapplication-square70x70logo" content="//www-media.stanford.edu/assets/favicon/mstile-70x70.png" />
-  <meta name="msapplication-square150x150logo" content="//www-media.stanford.edu/assets/favicon/mstile-150x150.png" />
-  <meta name="msapplication-square310x310logo" content="//www-media.stanford.edu/assets/favicon/mstile-310x310.png" />
+  <meta name="msapplication-TileImage" content="./static/images/pku.svg" />
+  <meta name="msapplication-square70x70logo" content="./static/images/pku.svg" />
+  <meta name="msapplication-square150x150logo" content="./static/images/pku.svg" />
+  <meta name="msapplication-square310x310logo" content="/./static/images/pku.svg" />
 
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-QZ38WT2YPD"></script>
