--- a/index.html
+++ b/index.html
@@ -621,42 +621,42 @@
         </div>
       </div>
 
-      <div class="is-flex is-flex-direction-row is-flex-wrap-wrap is-justify-content-space-evenly is-hidden-tablet">
+      <div class="is-flex is-flex-wrap-wrap is-justify-content-space-around is-hidden-tablet">
         <div class="author-block has-text-centered has-addons-centered">
-          <figure class="image  is-96x96">
+          <figure class="image  is-96x96" style="margin:auto">
             <a href="https://dotandung.github.io/">
               <img class="is-rounded
                       " src="./static/images/tandzungdo.jpg" alt="Tan-Dzung Do">
             </a>
           </figure>
-          <a href="https://dotandung.github.io/">Tan-Dzung Do</a><sup>1,2</sup>
+          <a href="https://dotandung.github.io/">Tan-Dzung<br> Do</a><sup>1,2</sup>
         </div>
         <div class="author-block has-text-centered has-addons-centered">
-          <figure class="image  is-96x96">
+          <figure class="image  is-96x96" style="margin:auto">
             <a href="https://user432.github.io/">
               <img class="is-rounded
                       " src="./static/images/gireesh.png" alt="Gireesh Nandiraju">
             </a>
           </figure>
-          <a href="https://user432.github.io/">Gireesh Nandiraju</a><sup>1,2</sup>
+          <a href="https://user432.github.io/">Gireesh<br> Nandiraju</a><sup>1,2</sup>
         </div>
         <div class="author-block has-text-centered has-addons-centered">
-          <figure class="image is-96x96">
+          <figure class="image is-96x96" style="margin:auto">
             <a href="https://42jaylonw.github.io/">
               <img class="is-rounded
                       " src="./static/images/jilongwang.png" alt="Jilong Wang">
             </a>
           </figure>
-          <a href="https://42jaylonw.github.io/">Jilong Wang</a><sup>2</sup>
+          <a href="https://42jaylonw.github.io/">Jilong<br> Wang</a><sup>2</sup>
         </div>
         <div class="author-block has-text-centered has-addons-centered">
-          <figure class="image  is-96x96">
+          <figure class="image  is-96x96" style="margin:auto">
             <a href="https://hughw19.github.io/">
               <img class="is-rounded
                       " src="./static/images/hewang.jpg" alt="He Wang">
             </a>
           </figure>
-          <a href="https://hughw19.github.io/">He Wang</a><sup>1,2</sup>
+          <a href="https://hughw19.github.io/">He<br> Wang</a><sup>1,2</sup>
         </div>
       </div>
 
@@ -666,8 +666,6 @@
         <span class="author-block"><sup>1</sup>Peking University, </span>
         <span class="author-block"><sup>2</sup>Galbot, </span>
       </div>
-
-
     </div>
     <br>
     <!-- <pre class="is-hidden-mobile"><code>@inproceedings{ha2024umilegs,
