--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
   </div>
 </section>
 
-<section class="section is-small" id="wbc">
+<!-- <section class="section is-small" id="wbc">
   <div class="container is-max-desktop">
     <div class="columns is-centered">
       <div class="column is-four-fifths is-centered">
@@ -576,9 +576,9 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
-<section class="section is-small">
+<!-- <section class="section is-small">
   <div class="container is-max-desktop">
     <h2 class="title is-3 is-size-4-mobile">Our Team</h2>
     <div class="container has-text-centered">
@@ -667,16 +667,16 @@
         <span class="author-block"><sup>2</sup>Galbot, </span>
       </div>
     </div>
-    <br>
+    <br> -->
     <!-- <pre class="is-hidden-mobile"><code>@inproceedings{ha2024umilegs,
   title={{UMI} on Legs: Making Manipulation Policies Mobile with Manipulation-Centric Whole-body Controllers}, 
   author={Huy Ha and Yihuai Gao and Zipeng Fu and Jie Tan and Shuran Song},
   year={2024},
   booktitle={Proceedings of the 2024 Conference on Robot Learning},
 }</code></pre> -->
-    <p>
+<!--     <p>
       If you have any questions, please contact <a href="https://dotandung.github.io/">Tan-Dzung Do</a>
-    </p>
+    </p> -->
   </div>
 </section>
 
