--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <div class="publication-links">
           <!-- PDF Link. -->
           <span class="link-block">
-            <a class="external-link button is-medium is-rounded">
+            <a class="external-link button is-medium is-rounded" href="./static/wlfm.pdf">
               <span class="icon">
                 <img src="./static/images/pdf.svg" alt="PDF" />
               </span>
@@ -144,7 +144,7 @@
         <div class="publication-links">
           <!-- PDF Link. -->
           <span class="link-block">
-            <a class="external-link button is-normal is-rounded">
+            <a class="external-link button is-normal is-rounded" href="./static/wlfm.pdf">
               <span class="icon">
                 <img src="./static/images/pdf.svg" alt="PDF" />
               </span>
@@ -578,7 +578,7 @@
   </div>
 </section> -->
 
-<!-- <section class="section is-small">
+<section class="section is-small">
   <div class="container is-max-desktop">
     <h2 class="title is-3 is-size-4-mobile">Our Team</h2>
     <div class="container has-text-centered">
@@ -667,132 +667,18 @@
         <span class="author-block"><sup>2</sup>Galbot, </span>
       </div>
     </div>
-    <br> -->
+    <br>
     <!-- <pre class="is-hidden-mobile"><code>@inproceedings{ha2024umilegs,
   title={{UMI} on Legs: Making Manipulation Policies Mobile with Manipulation-Centric Whole-body Controllers}, 
   author={Huy Ha and Yihuai Gao and Zipeng Fu and Jie Tan and Shuran Song},
   year={2024},
   booktitle={Proceedings of the 2024 Conference on Robot Learning},
 }</code></pre> -->
-<!--     <p>
-      If you have any questions, please contact <a href="https://dotandung.github.io/">Tan-Dzung Do</a>
-    </p> -->
+    <p>
+      If you have any questions, please contact <a href="https://dotandung.github.io/">Tan-Dzung Do</a>.
+    </p>
   </div>
 </section>
-
-
-
-<!-- <section class="section is-small" id="qa">
-  <div class="container is-max-desktop">
-    <div class="columns is-centered ">
-      <div class="column is-four-fifths">
-        <h2 class="title is-4 has-text-centered is-size-5-mobile">Questions & Answers</h2>
-
-        <div class="block">
-          <h3 class="title is-6">
-            What can't this framework do?
-          </h3>
-          <p>
-            There is only a one-way communication from the manipulation visuo-motor policy to the whole-body
-            controller,
-            via an end-effector trajectory interface. This has two main drawbacks:<br><br>
-            <b>(1) Guarantee Reachability</b>.
-            Sometimes the manipulation policy would ask the controller to move to target poses it can't track, like
-            ones
-            that are too high or rotate the gripper by too much.
-            Ideally, the controller could communicate to the manipulation policy what the
-            hardware is capable of as well.
-            <br><br>
-            <b>(2) Track Multiple End-effectors</b>.
-            Ideally, our robots would involve their entire body in manipulation tasks, not just its gripper.
-            Towards involving the robot's feet, body, and arms in manipulation as well, the real-world data collection
-            platform,
-            manipulation-controller interface, and the whole-body controller formulation has some work to do.
-          </p>
-        </div>
-
-        <div class="block">
-          <h3 class="title is-6">
-            I want to build a foundation policy for robotics.
-            What can UMI on Legs teach me about how to go about it?
-          </h3>
-          <p>
-            Tossing was flashy, but the in-the-wild cup rearrangement task (shown below) changed my perspective on what
-            a foundation policy for robotics should look like.
-            <video autoplay muted loop playsinline width="100%">
-              <source src="./static/videos/cup-in-the-wild-small.mp4" type="video/mp4">
-            </video>
-            We were able to just plug-and-play UMI's publicly released policy onto our robot dog (seen above in 1x
-            speed)!
-            With an expressive embodiment-agnostic interface in place, I'm optimistic about a world where people can
-            separately develop ever more general
-            visuo-motor policies and ever more robust WBCs, knowing that they can be plugged-and-played together in the
-            end.
-
-          </p>
-        </div>
-
-
-        <div class="block">
-          <h3 class="title is-6">
-            Can learning to track end-effector trajectories <i>really</i> result in kettlebell pushing?
-          </h3>
-          <p>
-            Yes, and no 🙃 Let me explain.<br><br>
-            Yes, because the kettlebell does get pushed to its target zone in our experiments, which technically
-            counts
-            as a success.
-            No, because the robot's behavior was not very elegant, despite the hardware being physically capable of
-            much
-            smoother, stronger pushes.
-            We've included mass, center of mass, and other joint domain randomization during training, but additionally
-            including force-torque perturbations at the end-effector during WBC
-            training could address take us a step closer to more robust pushing behaviors.
-          </p>
-        </div>
-
-
-        <div id="visualization-qa" class="block">
-          <h3 class="title is-6">What simulator do you use? Why does it look so realistic?</h3>
-          <p>
-            In this project, I use the <a href="https://developer.nvidia.com/isaac-gym">IsaacGym simulator</a> for
-            physics, but like many of my prior works, I use <a href="https://www.blender.org/">Blender</a> for
-            rendering (e.g., <a href="https://www.cs.columbia.edu/~huy/scalingup/">Scaling Up</a>, <a
-              href="https://flingbot.cs.columbia.edu/">FlingBot</a>).
-          </p>
-          <br>
-          <p>
-            Also, as in my prior works, I've published instructions for importing simulations into Blender.
-            If you're using IsaacGym, you can refer to this <a
-              href="https://github.com/real-stanford/umi-on-legs">project's codebase</a>.
-            If you're using PyBullet, you can use <a href="https://github.com/huy-ha/pybullet-blender-recorder">this
-              plugin</a> I developed for my <a href="https://github.com/real-stanford/decentralized-multiarm">multi-arm
-              motion planning project</a>.
-            If you're using MuJoCo, you can refer to the visualization instructions on my <a
-              href="https://github.com/real-stanford/scalingup/blob/master/docs/visualization.md">Scaling Up</a>'s
-            codebase.
-          </p>
-        </div>
-
-
-
-        <div class="block" id="wbc-prior-works">
-          <h3 class="title is-6">
-            Isn't this just <a href="https://manipulation-locomotion.github.io/">DeepWBC</a> or <a
-              href="https://wholebody-b1.github.io/">Visual Whole-Body Control</a>?
-          </h3>
-          <p>
-            These whole-body controllers are not manipulation-centric - they do not track end-effector trajectories in
-            task-frame.
-            Instead, they track instantaneous end-effector targets in body-frame, and depend on the quadruped's base
-            command.
-            This means their controllers can't be used to deploy existing table-top visuo-motor manipulation policies.
-          </p>
-        </div>
-      </div>
-</section>
- -->
-
 
 <footer class="footer">
   <div class="container">
@@ -802,19 +688,6 @@
           <p>
             Website template modified from <a href="https://nerfies.github.io/">NeRFies</a> and <a
               href="https://umi-on-legs.github.io/">UMI on Legs</a>.
-          </p>
-          <p>
-            This website is licensed under a <a rel="license"
-              href="http://creativecommons.org/licenses/by-sa/4.0/">Creative
-              Commons Attribution-ShareAlike 4.0 International License</a>.
-          </p>
-          <p>
-            This means you are free to borrow and modify the <a
-              href="https://github.com/nerfies/nerfies.github.io">source
-              code</a> of this website as long as
-            you link back to the <a href="https://nerfies.github.io/">NeRFies</a> page in the footer.
-            Please remember to remove the analytics code included in the header of the website which
-            you do not want on your website.
           </p>
         </div>
       </div>
