[fix] add affiliation

--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
 
       <div class="publication-authors">
         <span class="author-block"><sup>1</sup>Peking University, </span>
-        <span class="author-block"><sup>2</sup>Galbot, </span>
+        <span class="author-block"><sup>2</sup>Galbot</span>
       </div>
     </div>
     <br>
