--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
         Sim-to-Real RL for Generalizable<br class="is-hidden-mobile"> Articulated Object Manipulation
         <br class="is-hidden-mobile"> via Motion Adaptation and Impedance Control
       </h1>
-      <!-- <h1 class="is-2 is-italic is-size-4-mobile" style="font-size: 2rem; opacity: 80%;">
-        Conference on Robot Learning 2024
-      </h1> -->
+      <h3 class="is-3 is-italic is-size-4-mobile" style="font-size: 1.2rem; opacity: 80%;">
+        Conference on Robot Learning 2024  <a href="https://www.dynsyslab.org/mastering-robot-manipulation-in-a-world-of-abundant-data/">@MRM-D</a>, <a href="https://dex-manipulation.github.io/corl2024/">@MRM-D<br></a>
+      </h3>
       <div class="column has-text-centered is-hidden-mobile">
         <div class="publication-links">
           <!-- PDF Link. -->
